Fix video title when enabled on Material layout
When the Classic userstyle is enabled on YouTube's
Material layout it doesn't conflict except it
turns the video titles white, making them unreadable.
This fixes that.

--- a/YouTubeDeepDarkClassic.user.css
+++ b/YouTubeDeepDarkClassic.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Classic
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 2.2.8
+@version 2.2.9
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkClassic.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme) 
 @author RaitaroH
@@ -137,7 +137,7 @@
 
 /*GNU General Public License v3.0.*/
 
-/*2.2.8*/
+/*2.2.9*/
 
 	/*Main color variables*/
 	:root
@@ -1212,4 +1212,9 @@
 	{
 		border-color: var(--hover-background) !important;
 	}
+
+  /* fix for video title color conflict when enabled on Material layout */
+  a#video-title{
+    color: initial !important;
+  }
 }
